# council

./: Cargo.toml  build.rs  deny.toml  dev-env.Dockerfile  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
examples/council-cluster-demo/: application.rs  http_server.rs  main.rs  templates.rs
examples/council-cluster-demo/assets/: main.css
protos/: council.proto
src/: builder.rs  cluster.rs  grpc.rs  lib.rs  node.rs
src/cluster/: convergence_monitor.rs  failure_detector.rs  gossip_destinations.rs  tests.rs  version_vector.rs  views.rs  views_tests.rs
src/entities/: cluster.rs  node.rs
src/failure_detector/: mod.rs  stats.rs
src/grpc/: channel_factory.rs  client.rs  dtos_conversions.rs  mod.rs  server.rs
