[package]
name = "council"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "A library to build distributed applications, inspired by Akka Cluster"
keywords = ["cluster", "distributed-systems"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["sync", "rt"]}
tracing = "0.1.37"
thiserror = "1.0.38"
url = "2.3.1"
tonic = "0.8.3"
prost = "0.11"
serde = { version = "1.0.152", optional = true, features = ["derive"] }
siphasher = "0.3.10"
rand = "0.8.5"
num_enum = "0.5.7"
log = "0.4.17"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
time = { version = "0.3", features = ["quickcheck"] }
simplelog = "0.12.0"
warp = "0.3.3"

[build-dependencies]
tonic-build = "0.8"

[features]
serde = ["dep:serde", "url/serde", "time/serde"]